--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Export DB and referenced files to your TYPO3 dev installation",
     "license": "GPL-3.0-or-later",
     "require": {
-        "phpseclib/phpseclib": "^2.0"
+        "phpseclib/phpseclib": "^2.0",
+        "neos/utility-files": "^3.0"
     },
     "autoload": {
         "psr-4": {
