--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,44 @@
 # Full project: https://gitlab.com/pages/doxygen
 image: alpine
 
+
+codequality:
+  stage: codequality
+  image: docker:stable
+  variables:
+    DOCKER_DRIVER: overlay2
+  allow_failure: true
+  services:
+    - docker:stable-dind
+  script:
+    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    #- docker run --env SOURCE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock "hub.knallimall.org/docker/codequality:latest" /code
+    - docker run --env SOURCE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" analyze -f html /code analyze -f html > codeclimate.html
+    - mv codeclimate.html/ public/
+  artifacts:
+    paths: 
+    - public
+
+phpqa:
+  stage: codequality
+  image: zdenekdrahos/phpqa:v1.18.0
+  variables:
+    BACKEND_QA: "*/backend/var/QA"
+    BACKEND_CACHE: $CI_PROJECT_DIR/.composer
+  cache:
+    paths:
+    - $BACKEND_CACHE
+  script:
+    - export COMPOSER_CACHE_DIR=$BACKEND_CACHE
+    - mkdir ./phpqa
+    - phpqa --report --tools phpmd:100,phpcpd:100,phploc,pdepend --buildDir ./phpqa
+    #--buildDir ./.Build/QA --analyzedDirs ./Classes --ignoredDirs ./Tests,./.Build
+    - mv phpqa/ public/
+  allow_failure: true
+  artifacts:
+    paths: 
+    - public
+
 pages:
   script:
   - apk update && apk add doxygen
