Fix incalid yaml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
-# This file is a template, and might need editing before it works on your project.
-# Full project: https://gitlab.com/pages/doxygen
-image: alpine
-
+stages:
+  - codequality
+  - publish
 
 codequality:
   stage: codequality
@@ -41,6 +40,8 @@ phpqa:
     - public
 
 pages:
+  stage: publish
+  image: alpine
   script:
   - apk update && apk add doxygen
   - doxygen .doxygen
