--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,10 @@ codequality:
     - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
     - mkdir ./codeclimate
     - docker run --env SOURCE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" analyze -f html /code analyze -f html > codeclimate/codeclimate.html
-    - mv ./codeclimate/ public/
+    # - mv ./codeclimate/ public/
   artifacts:
     paths: 
-    - public
+    - codeclimate
 
 phpqa:
   stage: codequality
@@ -33,11 +33,11 @@ phpqa:
     - mkdir ./phpqa
     - phpqa --report --tools phpmd:100,phpcpd:100,phploc,pdepend --buildDir ./phpqa
     #--buildDir ./.Build/QA --analyzedDirs ./Classes --ignoredDirs ./Tests,./.Build
-    - mv phpqa/ public/
+    # - mv phpqa/ public/
   allow_failure: true
   artifacts:
     paths: 
-    - public
+    - phpqa
 
 pages:
   stage: publish
