--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,9 @@ pages:
   script:
   - apk update && apk add doxygen
   - doxygen .doxygen
-  - mv Documentation/html/ public/
+  - mv codeclimate/ public/codeclimate
+  - mv phpqa/ public/phpqa
+  - mv Documentation/html/ public/doxygen
   artifacts:
     paths:
     - public
