--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ pages:
   script:
   - apk update && apk add doxygen
   - doxygen .doxygen
-  - mv codeclimate/ public/codeclimate
+  # - mv codeclimate/ public/codeclimate
   - mv phpqa/ public/phpqa
   - mv Documentation/html/ public/doxygen
   artifacts:
