--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,10 @@ codequality:
     - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
     - mkdir ./codeclimate
     - docker run --env SOURCE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" analyze -f html /code analyze -f html > codeclimate/codeclimate.html
-    # - mv ./codeclimate/ public/
+    - mv ./codeclimate/ public/codeclimate
   artifacts:
     paths: 
-    - codeclimate
+    - public
 
 phpqa:
   stage: codequality
@@ -32,12 +32,11 @@ phpqa:
     - export COMPOSER_CACHE_DIR=$BACKEND_CACHE
     - mkdir ./phpqa
     - phpqa --report --tools phpmd:100,phpcpd:100,phploc,pdepend --buildDir ./phpqa
-    #--buildDir ./.Build/QA --analyzedDirs ./Classes --ignoredDirs ./Tests,./.Build
-    # - mv phpqa/ public/
+     - mv ./phpqa/ public/phpqa
   allow_failure: true
   artifacts:
     paths: 
-    - phpqa
+    - public
 
 pages:
   stage: publish
@@ -45,8 +44,6 @@ pages:
   script:
   - apk update && apk add doxygen
   - doxygen .doxygen
-  # - mv codeclimate/ public/codeclimate
-  - mv phpqa/ public/phpqa
   - mv Documentation/html/ public/doxygen
   artifacts:
     paths:
