--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,23 +2,6 @@ stages:
   - codequality
   - publish
 
-codequality:
-  stage: codequality
-  image: docker:stable
-  variables:
-    DOCKER_DRIVER: overlay2
-  allow_failure: true
-  services:
-    - docker:stable-dind
-  script:
-    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
-    - mkdir codeclimate
-    - docker run --env SOURCE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" analyze -f html /code analyze -f html > codeclimate/codeclimate.html
-    - mv codeclimate/ public/codeclimate
-  artifacts:
-    paths: 
-    - public
-
 phpqa:
   stage: codequality
   image: zdenekdrahos/phpqa:v1.18.0
@@ -30,9 +13,9 @@ phpqa:
     - $BACKEND_CACHE
   script:
     - export COMPOSER_CACHE_DIR=$BACKEND_CACHE
-    - mkdir ./phpqa
+    - mkdir phpqa
     - phpqa --report --tools phpmd:100,phpcpd:100,phploc,pdepend --buildDir ./phpqa
-     - mv ./phpqa/ public/phpqa
+     - mv phpqa/ public/
   allow_failure: true
   artifacts:
     paths: 
@@ -44,8 +27,7 @@ pages:
   script:
   - apk update && apk add doxygen
   - doxygen .doxygen
-  - mkdir public/doxygen
-  - mv Documentation/html/ public/doxygen
+  - mv Documentation/html/ public/
   artifacts:
     paths:
     - public
