--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ phpqa:
     - 'export COMPOSER_CACHE_DIR=$BACKEND_CACHE'
     - 'composer install --ignore-platform-reqs --no-progress --no-suggest'
     - 'phpqa --report --tools phpcs:10000,phpunit:10000 --buildDir var/QA --analyzedDirs ./ --ignoredDirs var,vendor --buildDir ./phpqa'
-    - mv phpqa public/
+    - mv phpqa/ public/
   artifacts:
     when: always
     paths:
