--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,11 @@ pages:
     - apk update && apk add doxygen
     - doxygen .doxygen
     - mkdir public/phpqa
-    - mv build/phpqa/ public/phpqa
-    - mv Documentation/doxygen/ public/
+    - mkdir .public
+    - mv build/phpqa/ .public/
+    - mv Documentation/doxygen/ .public/
+    - 'ls -la public/'
+    - mv .public public
     - 'ls -la public/'
   artifacts:
     paths:
