--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,22 @@ stages:
   - codequality
   - publish
 
+codequality:
+  stage: codequality
+  image: docker:stable
+  variables:
+    DOCKER_DRIVER: overlay2
+  allow_failure: true
+  services:
+    - docker:stable-dind
+  script:
+    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - mkdir codeclimate
+    - docker run --env SOURCE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" analyze -f html /code analyze -f html > codeclimate/codeclimate.html
+  artifacts:
+    paths: 
+    - codeclimate
+
 phpqa:
   stage: codequality
   image: zdenekdrahos/phpqa:v1.18.0
@@ -15,12 +31,12 @@ phpqa:
   script:
     - 'export COMPOSER_CACHE_DIR=$BACKEND_CACHE'
     - 'composer install --ignore-platform-reqs --no-progress --no-suggest'
-    - 'phpqa --report --tools phpcs:10000,phpunit:10000 --buildDir build/phpqa/ --analyzedDirs ./ --ignoredDirs var,vendor'
+    - 'phpqa --report --tools phpcs:10000,phpunit:10000 --buildDir phpqa/ --analyzedDirs ./ --ignoredDirs var,vendor'
     - 'ls -la'
   artifacts:
     when: always
     paths:
-    - build/
+    - phpqa/
     
 pages:
   stage: publish
@@ -32,7 +48,8 @@ pages:
     - apk update && apk add doxygen
     - doxygen .doxygen
     - mkdir .public
-    - mv build/phpqa/ .public/
+    - mv phpqa/ .public/
+    - mv codeclimate/ .public/
     - mv Documentation/doxygen/ .public/
     - 'ls -la .public/'
     - mv .public public
