configure phpqa with phpmd:100,phpcpd:100,phploc,pdepend

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ phpqa:
   script:
     - 'export COMPOSER_CACHE_DIR=$BACKEND_CACHE'
     - 'composer install --ignore-platform-reqs --no-progress --no-suggest'
-    - 'phpqa --report --tools phpcs:10000,phpunit:10000 --buildDir phpqa/ --analyzedDirs ./ --ignoredDirs var,vendor'
+    - 'phpqa --report --tools phpmd:100,phpcpd:100,phploc,pdepend --buildDir phpqa/ --analyzedDirs ./ --ignoredDirs var,vendor'
   artifacts:
     paths:
     - phpqa/
