Update readme and replace clue/phar-composer with MacFJA/PharBuilder

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "typo3reverse"
     ],
     "require-dev": {
-        "clue/phar-composer": "^1.0"
+        "macfja/phar-builder": "^0.2.7"
     }
 }
