--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,36 @@
 {
-    "name": "joro/typo3reversedeployment",
-    "description": "Export DB and files to your TYPO3 dev installation",
-    "license": "GPL-3.0-or-later",
-    "require": {
-        "phpseclib/phpseclib": "^2.0",
-        "neos/utility-files": "^3.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "JoRo\\": "JoRo/"
-        }
-    },
-    "bin": [
-        "typo3reverse"
-    ],
-    "require-dev": {
-        "macfja/phar-builder": "^0.2.7"
+  "name": "joro/typo3reversedeployment",
+  "description": "Export DB and files to your TYPO3 dev installation",
+  "license": "GPL-3.0-or-later",
+  "require": {
+    "phpseclib/phpseclib": "^2.0",
+    "neos/utility-files": "^3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "JoRo\\": "JoRo/"
     }
+  },
+  "bin": [
+    "typo3reverse"
+  ],
+  "require-dev": {
+    "macfja/phar-builder": "^0.2.7"
+  },
+  "extra": {
+    "phar-builder": {
+      "compression": "GZip",
+      "name": "typo3reverse.phar",
+      "output-dir": "./",
+      "entry-point": "./typo3reverse",
+      "include": ["JoRo"],
+      "include-dev": false,
+      "events": {
+        "command.build.start": "",
+        "command.build.end": [
+          "chmod +x ./typo3reverse.phar"
+        ]
+      }
+    }
+  }
 }
