--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,10 @@ codeclimate:
 
 build_phar:
   stage: build
+  image: akoehnlein/surf:php72
   script:
     - composer install
+    - php -d phar.readonly=0 vendor/bin/phar-builder package
   artifacts:
     expire_in: '1 hour'
     paths:
