--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ codeclimate:
 
 build_phar:
   stage: build
-  image: akoehnlein/surf:php72
+  image: akoehnlein/typo3:php72
   script:
     - composer install
     - php -d phar.readonly=0 vendor/bin/phar-builder package
