--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build_phar:
   stage: build
   image: akoehnlein/typo3:php72
   script:
+    - apk add php7-bcmath
     - composer install
     - php -d phar.readonly=0 vendor/bin/phar-builder package
   artifacts:
