Build gitlab dashboard

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,6 @@ build_phar:
 #  script:
 #    - gitlab-release --message 'New automated release' typo3reverse.phar
 
-
 sphinx:
   stage: build
   image: ochorocho/one-for-all-generator:sphinx
@@ -71,12 +70,12 @@ pages:
     - wget -O .public/index.php https://gitlab.knallimall.org/snippets/32/raw
     - echo "<li>Commit $CI_COMMIT_SHA</li><li>Branch $CI_COMMIT_REF_NAME</li>" >> git.txt
     - mv git.txt .public/
-    - php .public/index.php
-    - rm .public/index.php
-    - mv codeclimate.html .public/
+    - mv codeclimate .public/
     - mv Documentation/doxygen/ .public/
     - mv Documentation/sphinx/ .public/
     - mv .public public/
+    - php .public/index.php
+    - rm .public/index.php
   artifacts:
     paths:
     - public/
