--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
   "description": "Export DB and files to your TYPO3 dev installation",
   "license": "GPL-3.0-or-later",
   "require": {
-    "phpseclib/phpseclib": "^2.0",
-    "neos/utility-files": "^3.0"
+    "php": ">=5.5.0 < 7.4",
+
+    "symfony/process": "^2.7 || ^3.0 || ^3.3.6 || ^3.4.4 || ^4.0"
   },
   "autoload": {
     "psr-4": {
