--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "php": ">=5.5.0 < 7.4",
 
-    "symfony/process": "^2.7 || ^3.0 || ^3.3.6 || ^3.4.4 || ^4.0"
+    "symfony/process": "^2.7 || ^3.0 || ^3.3.6 || ^3.4.4 || ^4.0",
+    "neos/utility-files": "^5.2"
   },
   "autoload": {
     "psr-4": {
