--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
   "license": "GPL-3.0-or-later",
   "require": {
     "php": ">=5.5.0 < 7.4",
-
     "symfony/process": "^2.7 || ^3.0 || ^3.3.6 || ^3.4.4 || ^4.0",
-    "neos/utility-files": "^5.2"
+    "neos/utility-files": "^5.2",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
@@ -26,7 +26,9 @@
       "name": "typo3reverse.phar",
       "output-dir": "./",
       "entry-point": "./typo3reverse",
-      "include": ["JoRo"],
+      "include": [
+        "JoRo"
+      ],
       "include-dev": false,
       "events": {
         "command.build.start": "",
