--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,8 @@
   "description": "Export DB and files to your TYPO3 dev installation",
   "license": "GPL-3.0-or-later",
   "require": {
-    "php": ">=5.5.0 < 7.4",
-
-    "symfony/process": "^2.7 || ^3.0 || ^3.3.6 || ^3.4.4 || ^4.0",
-    "neos/utility-files": "^5.2"
+    "php": "^7.2 || ^8.0",
+    "symfony/process": "^2.7 || ^3.0 || ^4.0 || ^5.0"
   },
   "autoload": {
     "psr-4": {
@@ -18,7 +16,7 @@
   ],
   "require-dev": {
     "macfja/phar-builder": "^0.2.7",
-    "phpunit/phpunit": "^7.3"
+    "phpunit/phpunit": "^8.0"
   },
   "extra": {
     "phar-builder": {
