[TASK] Update packages
Now using phpstan and updated packages.
For now phar building is disabled.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,5 +29,8 @@ jobs:
             - name: Install dependencies
               run: composer install --prefer-dist --no-progress
 
+            - name: phpstan
+              run:  ./vendor/bin/phpstan analyse -l 6 JoRo Tests
+
             - name: Run unit tests
               run: ./vendor/bin/phpunit Tests/Unit/JoRo
